<resources>
    <string name="app_name">CaloryIn</string>
    <string name="title_login_page">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_signup_page">Register</string>
    <string name="name">Name</string>
    <string name="back_to_login">Back to Login</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="dashboard">Dashboard</string>
    <string name="daily_need">Daily Need</string>
    <string name="nutrition_percentage">Nutrition Percentage</string>
    <string name="percentage">0%</string>
    <string name="nutrition_fullfied">Nutrition Fullfied</string>
    <string name="latest_update_today">Latest Update Today</string>
    <string name="nutrition">Nutrition</string>
    <string name="recommendation">Recommendation</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="fiber">Fiber</string>
    <string name="water">Water</string>
    <string name="energy">Energy</string>


    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Upload</string>
    <string name="logout">Logout</string>
    <string name="deskripsi">Description</string>
    <string name="format_email_salah">Incorrect email format</string>
    <string name="password_8_karakter">The password must consist of a minimum of 8 characters</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="profil">Photo profil</string>
    <string name="history">History</string>
    <string name="logo">Logo</string>
    <string name="image">image</string>
    <string name="google">Google</string>
    <string name="name_food">Name Food</string>
    <string name="my_food">My Food</string>
    <string name="challenge">Challenge</string>
    <string name="detail">Detail</string>
    <string name="id_history">Id History</string>
    <string name="back_to_history">Back to History</string>
    <string name="carbo">Carbo</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="medal_star">Medal Star</string>
    <string name="_80_points">40 Points</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="age_input">Date of birth (YYYY-MM-DD)</string>
    <string name="height_input">Height (cm)</string>
    <string name="weight_input">Weight (kg)</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_text">Help us to personalize your nutrients needs</string>
    <string name="submit">Submit</string>
    <string name="close">close</string>
    <string name="basic">Basic</string>
    <string name="bronze">Bronze</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>
    <string name="_20_points">20 Points</string>
    <string name="weekly_challenge">Weekly Challenge</string>


</resources>