<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.profile.ProfileActivity"
    android:background="@color/background">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginBottom="72dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="52dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:layout_marginBottom="10dp"
                android:text="@string/profile"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_edit"
                android:layout_gravity="end"
                android:contentDescription="@string/edit_profile"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                tools:src="@tools:sample/avatars"
                android:background="@drawable/image_profil"
                app:civ_border_color="@color/yellow"
                app:civ_border_width="2dp"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_medal_star"
                    android:contentDescription="@string/medal_star"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_80_points"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:gravity="center"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/yellow"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="16sp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/yellow"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textSize="16sp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/yellow"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textSize="16sp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/yellow"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textSize="16sp"/>
            </LinearLayout>

            <Button
                android:id="@+id/button_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/logout"
                android:textSize="20sp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="0.431"
                android:layout_margin="10dp"
                android:layout_marginTop="40dp"
                android:background="@color/yellow"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        app:fabCradleRoundedCornerRadius="50dp"
        app:fabCradleMargin="10dp"
        android:clipChildren="false"
        android:clipToPadding="false">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottomNavigationView"
            app:menu="@menu/bottom_menu"
            android:background="@drawable/bottom_navigation_background"
            android:elevation="10dp"/>

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_photo_camera_24"
        app:maxImageSize="50dp"
        android:clickable="true"
        android:backgroundTint="@color/white"
        app:layout_anchor="@id/bottomAppBar"
        android:contentDescription="@string/camera" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_camera_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_photo_camera_24"
        app:maxImageSize="40dp"
        android:visibility="gone"
        android:backgroundTint="@color/yellow"
        android:contentDescription="@string/camera"
        android:layout_margin="16dp"
        app:layout_anchor="@id/fab_camera"
        android:layout_gravity="center_horizontal"
        app:layout_anchorGravity="center_horizontal"
        android:layout_marginBottom="8dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_gallery_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_image_24"
        app:maxImageSize="40dp"
        android:visibility="gone"
        android:backgroundTint="@color/yellow"
        android:contentDescription="@string/camera"
        android:layout_margin="16dp"
        app:layout_anchor="@id/fab_camera_up"
        android:layout_gravity="center_horizontal"
        app:layout_anchorGravity="center_horizontal"
        android:layout_marginBottom="8dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
